# aurora_clicker

./: .gitignore
.docker/: Dockerfile
app/backend/: Cargo.toml
app/backend/src/: main.rs
app/backend/src/api/: rest.rs
app/backend/src/model/: user.rs
app/backend/src/repository/: user.rs
app/frontend/: .gitignore  connectWallet.js  counter.js  deploy.sh  index.html  main.js  package-lock.json  package.json  style.css
