[package]
name = "click_memer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "^4"
uuid = {version = "^1", features = ["v4"]}
serde = {version = "^1", features = ["derive"]}
env_logger = "^0.9"
log = "^0.4"
strum_macros = "^0.24"
strum = {version = "^0.24", features = ["derive"]}
rocket = "0.5.0-rc.1"
